// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag rendering renders expected elements 1`] = `
<div
  className="Tag Tag--md Tag--gray"
  id="random-id"
>
  <span
    title="gray"
  >
    gray
  </span>
</div>
`;

exports[`Tag rendering renders expected elements when onRemove is ser 1`] = `
<div
  className="Tag Tag--md Tag--gray Tag--removable"
  id="random-id"
>
  <span
    title="gray"
  >
    gray
  </span>
  <button
    aria-labelledby="random-id"
    className="Tag__remove"
    onClick={[MockFunction]}
    title="Remove title"
    type="button"
  >
    <Close />
  </button>
</div>
`;

exports[`Tag rendering renders expected elements when optional properties are set 1`] = `
<button
  className="Tag Tag--sm Tag--red TestClass"
  id="random-id"
  onClick={[MockFunction]}
  type="button"
>
  <test-icon
    className="Tag__icon"
  />
  <span
    title="Test tag title"
  >
    red
  </span>
</button>
`;
